--- a/DOCTYPE.html
+++ b/DOCTYPE.html
@@ -15,13 +15,17 @@
 <li><a href="#">Cupcakes & Prices</a></li>
 <li><a href="#">Locations</a></li>
 <li class= "last"><a href="#">Contact Us</a></li>
+</ul>
 
+<div id="intro"> 
+<h1> Opposites really do attract, especially in our kitchen! We combine unexpected flavors that melt together to create ironically delicious desserts. </h1>
 
+<p> 
+<a href="#" class="btn">Browse Our Cupcakes</a></p>
 
-	</ul>
+</div>
 
-
-
+<img src="img/you-bake-me-blush.gif" alt="You Bake Me Blush">
 </body>
 
 
