Another New Image/Links

--- a/DOCTYPE.html
+++ b/DOCTYPE.html
@@ -26,6 +26,16 @@
 </div>
 
 <img src="img/you-bake-me-blush.gif" alt="You Bake Me Blush">
+
+
+<div id="featured-cupcake">
+	<h2>Cupcake of the Week</h2>
+	<p>This week's featured cupcake is the <a href="#">Avocado Chocolate cupcake</a>. Its strange combo of flavors will kick your taste buds into fiesta mode! </p>
+	<img src="img/featured-cupcake.jpg" alt=Avocado Chocolate Cupcake>
+
+</div>
+
+
 </body>
 
 
