--- a/DOCTYPE.html
+++ b/DOCTYPE.html
@@ -35,6 +35,16 @@
 
 </div>
 
+<div id="new-cupcakes">
+<h2>Fresh Out the Oven</h2>
+<p> Our newest cupcakes are <a href="#">Bacon Me Crazy</a> and <a href="#">Jalepeno So Spicy</a>.
+</p>
+<img src="img/new-cupcake-bacon.jpg" alt=Bacon Me Crazy>
+<img src="img/new-cupcake-jalapeno.jpg" alt=Jalapeno So Spicy>
+</div>
+
+
+
 
 </body>
 
