--- a/DOCTYPE.html
+++ b/DOCTYPE.html
@@ -12,7 +12,7 @@
 <img src="img/logo.gif" alt="Smells Like Bakin">
 <ul class="nav">
 <li><a href="#">About</a></li>
-<li><a href="#">Cupcakes & Prices</a></li>
+<li><a href="#">Cupcakes &amp: Prices</a></li>
 <li><a href="#">Locations</a></li>
 <li class= "last"><a href="#">Contact Us</a></li>
 </ul>
@@ -42,6 +42,30 @@
 <img src="img/new-cupcake-bacon.jpg" alt=Bacon Me Crazy>
 <img src="img/new-cupcake-jalapeno.jpg" alt=Jalapeno So Spicy>
 </div>
+
+
+<h2>Inside the Kitchen</h2>
+
+<p>Smells Like Bakin' started out in the garage of the husband and wife duo Allison &amp: Joseph. Allison is the baker, and Joseph found a way for them to make a business out of her tast treat. Flash forward to today and they have a successful store front, catering business and cupcake truck. </p>
+<p><a href="#" class="btn-small">Read More</a></p>
+
+<h2>Get Bakin' with Us</h2>
+
+<div id="contact">
+	<p>Call us: <span> 1-555-CUP-CAKE </span><br>
+		Email us: <a href="#">bakeon@smellslikebakin.com</a></p>
+</div>
+
+
+
+
+
+
+
+
+
+
+
 
 
 
