--- a/DOCTYPE.html
+++ b/DOCTYPE.html
@@ -37,7 +37,7 @@
 
 <div id="new-cupcakes">
 <h2>Fresh Out the Oven</h2>
-<p> Our newest cupcakes are <a href="#">Bacon Me Crazy</a> and <a href="#">Jalepeno So Spicy</a>.
+<p> Our newest cupcakes are <a href="#">Bacon Me Crazy</a> and <a href="#">Jalepe&ntilde;o So Spicy</a>.
 </p>
 <img src="img/new-cupcake-bacon.jpg" alt=Bacon Me Crazy>
 <img src="img/new-cupcake-jalapeno.jpg" alt=Jalapeno So Spicy>
@@ -46,7 +46,7 @@
 
 <h2>Inside the Kitchen</h2>
 
-<p>Smells Like Bakin' started out in the garage of the husband and wife duo Allison &amp: Joseph. Allison is the baker, and Joseph found a way for them to make a business out of her tast treat. Flash forward to today and they have a successful store front, catering business and cupcake truck. </p>
+<p>Smells Like Bakin' started out in the garage of the husband and wife duo Allison &amp; Joseph. Allison is the baker, and Joseph found a way for them to make a business out of her tast treat. Flash forward to today and they have a successful store front, catering business and cupcake truck. </p>
 <p><a href="#" class="btn-small">Read More</a></p>
 
 <h2>Get Bakin' with Us</h2>
@@ -57,17 +57,15 @@
 </div>
 
 
+<p>We announce all of our new flavors first through Facebook &amp; Twitter, and even take requests!</p>
 
+<a href="http://www.facebook.com/SmellsLikeBakin"> <img src="img/facebook.gif" alt=Facebook"></a>
 
+<a href="http://www.twitter.com/SmellsLikeBakin"> <img src="img/twitter.gif" alt=Twitter"></a>
 
+<div id="copyright">
 
-
-
-
-
-
-
-
+<p>&copy; 2012 Smells Like Bakin' Cupcake Company. All Rights Reserved. </p> </div>
 
 
 </body>
